load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "frankweiler_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "frankweiler_core",
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    proc_macro_deps = [
        "@frankweiler_crates//:async-trait",
    ],
    deps = [
        "//frankweiler/backend/schema:frankweiler_schema",
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:chrono",
        "@frankweiler_crates//:serde",
        "@frankweiler_crates//:serde_json",
        "@frankweiler_crates//:serde_yaml",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:thiserror",
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:uuid",
    ],
)

rust_test(
    name = "core_unittests",
    size = "small",
    crate = ":frankweiler_core",
    edition = "2021",
    deps = [
        "@frankweiler_crates//:tempfile",
    ],
)

# End-to-end test of the production DoltRepo path against a doltlite
# file in a throwaway temp dir. No subprocess, no port — runs anywhere.
rust_test(
    name = "dolt_backend_integration_test",
    srcs = ["tests/dolt_backend_integration.rs"],
    edition = "2021",
    deps = [
        ":frankweiler_core",
        "//frankweiler/backend/schema:frankweiler_schema",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tempfile",
        "@frankweiler_crates//:tokio",
    ],
)
