load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//tools:insta.bzl", "insta_update")

exports_files([
    "Cargo.toml",
    "src/qmd/mod.rs",  # canonical DEFAULT_QMD_VERSION, read by //tools:qmd_version_pins_test
])

rust_library(
    name = "frankweiler_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "frankweiler_core",
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    proc_macro_deps = [
        "@frankweiler_crates//:async-trait",
    ],
    deps = [
        "//frankweiler/backend/app_schema:app_schema",
        "//frankweiler/backend/obs:frankweiler_obs",
        "//frankweiler/backend/schema:frankweiler_schema",
        "//frankweiler/backend/time:frankweiler_time",
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:chrono",
        "@frankweiler_crates//:serde",
        "@frankweiler_crates//:serde_json",
        "@frankweiler_crates//:serde_yaml",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:thiserror",
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:uuid",
    ],
)

rust_test(
    name = "core_unittests",
    size = "small",
    crate = ":frankweiler_core",
    edition = "2021",
    deps = [
        "@frankweiler_crates//:tempfile",
    ],
)

# End-to-end test of the production DoltRepo path against a doltlite
# file in a throwaway temp dir. No subprocess, no port — runs anywhere.
rust_test(
    name = "dolt_backend_integration_test",
    srcs = ["tests/dolt_backend_integration.rs"],
    edition = "2021",
    deps = [
        ":frankweiler_core",
        "//frankweiler/backend/schema:frankweiler_schema",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tempfile",
        "@frankweiler_crates//:tokio",
    ],
)

# (config_examples_test moved to //frankweiler/backend/ingest_config with the
# config module.)

# Insta snapshot of the TNG fixture's `backend_index.doltlite_db` contents. Catches
# silent data drift in the load pipeline — most recently the
# WAL-not-checkpointed bug where the genrule shipped an empty .db.
# Update by running `cargo insta review` from frankweiler/backend.
rust_test(
    name = "fixture_db_snapshot_test",
    srcs = ["tests/fixture_db_snapshot.rs"],
    # Force the crate name so insta's `.snap` lookup ("<crate>__<test>.snap")
    # agrees with what cargo would generate. Without this, bazel uses the
    # rule name (`fixture_db_snapshot_test`) while cargo uses the source
    # filename (`fixture_db_snapshot`), and the two would write/read
    # different files.
    crate_name = "fixture_db_snapshot",
    data = [
        "//tests/fixtures:ingested/backend_index.doltlite_db",
    ] + glob(
        ["tests/snapshots/fixture_db_snapshot__*.snap"],
        allow_empty = True,
    ),
    edition = "2021",
    env = {
        # insta defaults to writing .new files next to the source file,
        # which it locates via CARGO_MANIFEST_DIR. Bazel doesn't surface
        # the source tree to the test, so point insta at the workspace
        # root explicitly. Same trick the per-provider snapshot tests use.
        "INSTA_WORKSPACE_ROOT": ".",
    },
    deps = [
        "@frankweiler_crates//:insta",
        "@frankweiler_crates//:runfiles",
        "@frankweiler_crates//:serde_json",
        "@frankweiler_crates//:sha2",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tokio",
    ],
)

insta_update(
    name = "fixture_db_snapshot_test.update",
    test = ":fixture_db_snapshot_test",
)
