[package]
name = "frankweiler-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
frankweiler-schema = { path = "../schema" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
insta = "1.41"
sha2 = "0.10"
