[package]
name = "frankweiler-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
app-schema = { path = "../app_schema" }
frankweiler-schema = { path = "../schema" }
frankweiler-obs = { path = "../obs" }
frankweiler-time = { path = "../time" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
insta = "1.41"
sha2 = "0.10"
runfiles = "0.2"
