load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

# Prototype DAG runner (see /dag-runner.md): step contract, edge
# derivation from artifact-path overlap, incremental scheduler with
# per-failure-kind retry + subtree poisoning, NDJSON progress events,
# and subprocess step execution. Deliberately standalone — no dep on
# etl/core — so the contract stays thin while it's being evaluated.
rust_library(
    name = "frankweiler_dag",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    crate_name = "frankweiler_dag",
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    deps = [
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:blake3",
        "@frankweiler_crates//:libc",
        "@frankweiler_crates//:serde",
        "@frankweiler_crates//:serde_json",
        "@frankweiler_crates//:serde_yaml",
        "@frankweiler_crates//:thiserror",
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:walkdir",
    ],
)

rust_test(
    name = "dag_unittests",
    size = "small",
    crate = ":frankweiler_dag",
    edition = "2021",
    deps = [
        "@frankweiler_crates//:tempfile",
    ],
)

# The DAG runner: loads a new-format DAG config file and executes it,
# with `step:`-typed entries dispatched to the sibling `datalib-step`
# binary (//frankweiler/backend/datalib_step).
rust_binary(
    name = "datalib_dag",
    srcs = ["src/bin/datalib_dag.rs"],
    crate_name = "datalib_dag",
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    deps = [
        ":frankweiler_dag",
        "//frankweiler/backend/time:frankweiler_time",
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:tokio",
    ],
)
