load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

# Framework crate. Provider-specific Extract/Translate code lives in
# sibling crates under providers/<name>/ (see providers/slack/BUILD.bazel).
rust_library(
    name = "frankweiler_etl",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    crate_name = "frankweiler_etl",
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    # The shim travels with the library so any binary that links
    # `frankweiler_etl` gets it in runfiles; `latchkey::ensure_curl_shim`
    # then resolves it via the bazel runfiles lookup in `resolve()`.
    data = [":latchkey_curl_shim"],
    proc_macro_deps = [
        "@frankweiler_crates//:async-trait",
    ],
    deps = [
        "//frankweiler/backend/core:frankweiler_core",
        "//frankweiler/backend/obs:frankweiler_obs",
        "//frankweiler/backend/time:frankweiler_time",
        "//frankweiler/backend/schema:frankweiler_schema",
        "//frankweiler/backend/index_lib:frankweiler_index_lib",
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:blake3",
        "@frankweiler_crates//:chrono",
        "@frankweiler_crates//:clap",
        "@frankweiler_crates//:indicatif",
        "@frankweiler_crates//:runfiles",
        "@frankweiler_crates//:serde",
        "@frankweiler_crates//:serde_json",
        "@frankweiler_crates//:sha2",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tempfile",
        "@frankweiler_crates//:thiserror",
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:tracing",
    ],
)

# Chrome-impersonating curl shim. Depends transitively on `boring-sys2`,
# whose build script shells out to `cmake` + a C toolchain to build
# boringssl. We rely on the host having those on PATH (pinned to a
# deterministic value via `--action_env=PATH=…` in `.bazelrc`) rather
# than going through rules_foreign_cc.
rust_binary(
    name = "latchkey_curl_shim",
    srcs = ["src/bin/latchkey_curl_shim.rs"],
    edition = "2021",
    # Intentionally NOT stamped. The shim ships in the runfiles of
    # `frankweiler_etl` (see `data = [":latchkey_curl_shim"]` above), so
    # any consumer of that library — every etl/providers/* test — picks
    # it up as a runfile. Stamping it makes every git commit invalidate
    # those test actions via the stable-status.txt input. Its `--version`
    # is informational (the shim isn't a release artifact); the
    # user-facing stamp lives on //frankweiler/backend/sync:frankweiler_sync_bin.
    visibility = ["//frankweiler:__subpackages__"],
    deps = [
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:wreq",
        "@frankweiler_crates//:wreq-util",
    ],
)

# Provider-agnostic Load step: walk *.grid_rows.json sidecars and
# upsert into Dolt; tracks markdowns_loaded(qmd_path, fingerprint) for
# idempotent skips.
rust_binary(
    name = "grid_rows_load",
    srcs = ["src/bin/grid_rows_load.rs"],
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    deps = [
        ":frankweiler_etl",
        "//frankweiler/backend/obs:frankweiler_obs",
        "//frankweiler/backend/qmd_indexer:frankweiler_qmd_indexer",
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:clap",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:tracing",
    ],
)

rust_test(
    name = "etl_unittests",
    size = "small",
    crate = ":frankweiler_etl",
    edition = "2021",
    deps = [
        "@frankweiler_crates//:tempfile",
    ],
)
